packages/parser/tests/snapshots/lexical_grammar_snapshots@nowdoc_string.php.snap
---
source: packages/parser/tests/lexical_grammar.rs
expression: parsed_file.next().unwrap()
input_file: packages/parser/tests/fixtures/nowdoc_string.php
---
Pair {
    rule: SCRIPT,
    span: Span {
        str: "<?php\n\n<<<'EOD'\nThis is a basic nowdoc string.\nIt can span multiple lines.\nEOD;\n\n?>",
        start: 0,
        end: 83,
    },
    inner: [
        Pair {
            rule: SCRIPT_SECTION,
            span: Span {
                str: "<?php\n\n<<<'EOD'\nThis is a basic nowdoc string.\nIt can span multiple lines.\nEOD;\n\n?>",
                start: 0,
                end: 83,
            },
            inner: [
                Pair {
                    rule: OPEN_TAG,
                    span: Span {
                        str: "<?php",
                        start: 0,
                        end: 5,
                    },
                    inner: [],
                },
                Pair {
                    rule: NOWDOC_STRING_LITERAL,
                    span: Span {
                        str: "<<<'EOD'\nThis is a basic nowdoc string.\nIt can span multiple lines.\nEOD;",
                        start: 7,
                        end: 79,
                    },
                    inner: [
                        Pair {
                            rule: NOWDOC_CONTENT,
                            span: Span {
                                str: "This is a basic nowdoc string.\nIt can span multiple lines.\n",
                                start: 16,
                                end: 75,
                            },
                            inner: [],
                        },
                    ],
                },
                Pair {
                    rule: CLOSE_TAG,
                    span: Span {
                        str: "?>",
                        start: 81,
                        end: 83,
                    },
                    inner: [],
                },
            ],
        },
    ],
}
