packages/parser/tests/snapshots/lexical_grammar_snapshots@short_open_tag.php.snap
---
source: packages/parser/tests/lexical_grammar.rs
expression: parsed_file.next().unwrap()
input_file: packages/parser/tests/fixtures/short_open_tag.php
---
Pair {
    rule: SCRIPT,
    span: Span {
        str: "<? 'short open tag' ?>",
        start: 0,
        end: 22,
    },
    inner: [
        Pair {
            rule: SCRIPT_SECTION,
            span: Span {
                str: "<? 'short open tag' ?>",
                start: 0,
                end: 22,
            },
            inner: [
                Pair {
                    rule: OPEN_TAG,
                    span: Span {
                        str: "<?",
                        start: 0,
                        end: 2,
                    },
                    inner: [],
                },
                Pair {
                    rule: SINGLE_QUOTED_STRING_LITERAL,
                    span: Span {
                        str: "'short open tag'",
                        start: 3,
                        end: 19,
                    },
                    inner: [],
                },
                Pair {
                    rule: CLOSE_TAG,
                    span: Span {
                        str: "?>",
                        start: 20,
                        end: 22,
                    },
                    inner: [],
                },
            ],
        },
    ],
}
