packages/parser/tests/snapshots/nowdoc_string_literal.snap
---
source: packages/parser/tests/literals.rs
expression: literals
input_file: packages/parser/tests/fixtures/nowdoc_string_literals.php
---
- name: Basic nowdoc string
  content: "<<<'EOD'\nThis is a basic nowdoc string.\nIt can span multiple lines.\nEOD"
  line: 4
  length: 71
- name: Nowdoc with variables (not interpolated)
  content: "<<<'EOD'\nHello, $name!\nVariables are not interpolated in nowdoc strings.\nEOD"
  line: 10
  length: 76
- name: Nowdoc with quotes and special characters
  content: "<<<'EOD'\nNowdoc strings can contain \"double quotes\" and 'single quotes'.\nSpecial characters like \\n \\t are treated literally.\nEOD"
  line: 16
  length: 129
- name: Nowdoc with HTML
  content: "<<<'HTML_CODE'\n<div class=\"example\">\n    <p>This is an HTML snippet in a nowdoc string.</p>\n</div>\nHTML_CODE"
  line: 22
  length: 108
- name: Nowdoc with indentation (preserves whitespace)
  content: "<<<'PHP_CODE'\n    function example() {\n        echo \"This code block preserves indentation\";\n    }\nPHP_CODE"
  line: 29
  length: 107
- name: Nowdoc with an empty string
  content: "<<<'EMPTY'\nEMPTY"
  line: 36
  length: 16
- name: Nowdoc containing PHP code
  content: "<<<'PHP_SCRIPT'\n<?php\n$array = [1, 2, 3];\nforeach ($array as $value) {\n    echo $value;\n}\n?>\nPHP_SCRIPT"
  line: 40
  length: 103
