packages/parser/tests/snapshots/strings_nowdoc_literals.snap
---
source: packages/parser/tests/lexical_grammar.rs
expression: nowdoc_strings
input_file: packages/parser/tests/fixtures/strings_nowdoc.php
---
- rule: Nowdoc String
  start_identifier: EOD
  content: "This is a basic nowdoc string.\nIt can span multiple lines.\n"
  end_identifier: EOD
- rule: Nowdoc String
  start_identifier: EOD
  content: "Hello, $name!\nVariables are not interpolated in nowdoc strings.\n"
  end_identifier: EOD
- rule: Nowdoc String
  start_identifier: EOD
  content: "Nowdoc strings can contain \"double quotes\" and 'single quotes'.\nSpecial characters like \\n \\t are treated literally.\n"
  end_identifier: EOD
- rule: Nowdoc String
  start_identifier: HTML_CODE
  content: "<div class=\"example\">\n    <p>This is an HTML snippet in a nowdoc string.</p>\n</div>\n"
  end_identifier: HTML_CODE
- rule: Nowdoc String
  start_identifier: PHP_CODE
  content: "    function example() {\n        echo \"This code block preserves indentation\";\n    }\n"
  end_identifier: PHP_CODE
- rule: Nowdoc String
  start_identifier: EMPTY
  content: EMPTY
  end_identifier: ""
- rule: Nowdoc String
  start_identifier: PHP_SCRIPT
  content: "<?php\n$array = [1, 2, 3];\nforeach ($array as $value) {\n    echo $value;\n}\n?>\n"
  end_identifier: PHP_SCRIPT
